<resources>
    <string name="app_name">Collect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="btn_add_book">書籍登録</string>
    <string name="photo">表紙画像</string>
    <string name="btn_shelf">本棚</string>
    <string name="btn_record">記録閲覧</string>
    <string name="btn_login">ログイン</string>
    <string name="image">表紙画像を設定して下さい</string>
    <string name="text_title">題名</string>
    <string name="text_author">著者名</string>
    <string name="text_date">登録日</string>
    <string name="text_rating">お気に入り度</string>
    <string name="text_thought">感想</string>
    <string name="btn_add">登録</string>
    <string name="btn_shelf_edit">本棚編集</string>
    <string name="text_yet">読み途中</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="btn_profile">プロフィール</string>
    <string name="btn_list_book">登録書籍一覧</string>
    <string name="btn_list_item">小物一覧</string>
    <string name="btn_calendar">カレンダー</string>
    <string name="user_name">ユーザー名：</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="back">&lt;</string>
    <string name="forward">&gt;</string>
    <string name="btn_edit">編集</string>
    <string name="duration">今までに読んだ本：</string>
    <string name="edit_user_name">ユーザー名を入力</string>
    <string name="item_name">アイテム名</string>
    <string name="item_num">未入手</string>
    <string name="duration_month">今月読んだ本：</string>
    <string name="btn_favorite">お気に入り</string>
    <string name="btn_book">本</string>
    <string name="btn_item">小物</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_bonus_message">ログインボーナス %1$s を獲得しました</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>