<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShelfFragment">

    <!--本棚-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="664dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ButtonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ShelfLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ShelfLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ShelfLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
        </LinearLayout>
    </LinearLayout>

    <!--ボタン-->
    <LinearLayout
        android:id="@+id/ButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_add_book"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:insetBottom="0dp"
            android:text="@string/btn_add_book"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/btn_shelf"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:insetBottom="0dp"
            android:text="@string/btn_shelf_edit"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/btn_record"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:insetBottom="0dp"
            android:text="@string/btn_record"
            app:cornerRadius="0dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>